--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     voluptatum quibusdam repellat aspernatur iste!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ullam veniam ex vel placeat modi
                     voluptatum quibusdam repellat aspernatur iste!</p>
-                <span><button>More</button></span>
+                <button>More</button>
             </div>
         </div>
         <!-- Contact Us -->
