--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- CSS stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
@@ -62,16 +63,38 @@
             </div>
         </div>
         <!-- Contact Us -->
-        <div id="contactUs" class="contact-us">
-            <h3>Contact Us</h3>
-            <textarea placeholder="Type here"></textarea>
-            <button>Send</button>
-        </div>
+        <section id="contact-us">
+            <div class="contact-us, container">
+                <form action="https://formspree.io/f/xpzkwkqd" method="POST" id="my-form">
+
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input type="text" id="firstName" name="firstName" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="lastName">Last Name</label>
+                        <input type="text" id="lastName" name="lastName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <div id="status"></div>
+        </section>
     </div>
     <!-- footer -->
     <footer>
         <p>© Copyright 2021 Inertial Robotics</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
