--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="navbar-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="#aboutUs">About Us</a></li>
-            <li><a href="#contactUs">Contact Us</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
         </ul>
         <ul class="navbar-icons">
             <a href="https://www.facebook.com/"><i class="social-icon fab fa-facebook-f"></i></a>
