--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
         <ul class="navbar-icons">
             <a href="https://www.facebook.com/"><i class="social-icon fab fa-facebook-f"></i></a>
-            <a href="mailto:lixun1914@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
+            <a href="#contact-us"><i class="social-icon fas fa-envelope"></i></a>
         </ul>
 
         <a href="#" class="navbar-toggleBtn">
