--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
         <!-- Contact Us -->
         <section id="contact-us">
+            <h1>Contact Us</h1>
             <div class="contact-us, container">
                 <form action="https://formspree.io/f/xpzkwkqd" method="POST" id="my-form">
 
