--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- main -->
     <div class="main-feature">
         <!-- About Us -->
-        <div id="aboutUs" class="about-us">
+        <section id="aboutUs" class="about-us">
             <img class="about-us-img" src="image/roberto-nickson-6pE5ib-I5-o-unsplash.jpg" alt="">
             <div class="about-us-text">
                 <h3>About Us</h3>
@@ -61,7 +61,7 @@
                     voluptatum quibusdam repellat aspernatur iste!</p>
                 <button>More</button>
             </div>
-        </div>
+        </section>
         <!-- Contact Us -->
         <section id="contact-us">
             <h1>Contact Us</h1>
